--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -79,12 +79,14 @@ jobs:
           mkdir ./core && cd ./core
           export TUN_VER=$(curl -sfL https://raw.githubusercontent.com/vernesong/OpenClash/core/dev/core_version | sed -n "2{s/\r$//;p;q}")
           echo $TUN_VER
-          curl -sfL -o ./tun.gz https://github.com/vernesong/OpenClash/raw/core/dev/premium/clash-linux-arm64-$TUN_VER.gz
-          gzip -d ./tun.gz && mv ./tun ./clash_tun
+          #curl -sfL -o ./tun.gz https://github.com/vernesong/OpenClash/raw/core/dev/premium/clash-linux-arm64-$TUN_VER.gz
+          #gzip -d ./tun.gz && mv ./tun ./clash_tun
           curl -sfL -o ./meta.tar.gz https://github.com/vernesong/OpenClash/raw/core/dev/meta/clash-linux-arm64.tar.gz
           tar -zxf ./meta.tar.gz && mv ./clash ./clash_meta
-          curl -sfL -o ./dev.tar.gz https://github.com/vernesong/OpenClash/raw/core/dev/dev/clash-linux-arm64.tar.gz
-          tar -zxf ./dev.tar.gz
+          curl -sfL -o ./smart.tar.gz https://github.com/vernesong/OpenClash/raw/core/dev/smart/clash-linux-arm64.tar.gz
+          tar -zxf ./smart.tar.gz && mv ./clash ./clash_smart
+          #curl -sfL -o ./dev.tar.gz https://github.com/vernesong/OpenClash/raw/core/dev/dev/clash-linux-arm64.tar.gz
+          #tar -zxf ./dev.tar.gz
           chmod +x ./clash*
           rm -rf ./*.gz
           echo 'show openclash info'
