--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -350,6 +350,7 @@ jobs:
         with:
           delete_releases: true
           releases_keep_latest: 10
+          delete_tags: true
           delete_workflows: true
           workflows_keep_day: 30
           gh_token: ${{ secrets.GITHUB_TOKEN }}
